resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: label-hook-deployment
  labels:
    app: label-hook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: label-hook
  template:
    metadata:
      labels:
        app: label-hook
    spec:
      nodeName: node139
      serviceAccount: label-hook-sa
      containers:
        - name: label-hook
          image: registry.cn-beijing.aliyuncs.com/dosstack/kubestack-label-hook:v1
#          imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          args:
            - -tlsCertFile=/etc/webhook/certs/cert.pem
            - -tlsKeyFile=/etc/webhook/certs/key.pem
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: label-hook-certs
