resources/mutating-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: label-hook-cfg
  labels:
    app: label-hook
webhooks:
  - name: label.webhook.doslab.io
    rules:
      - apiGroups:
          - doslab.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - virtualmachines
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: label-hook-svc
        path: "/mutate/add-label"
      caBundle: ${CA_BUNDLE}
    sideEffects: None
